--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Lato" rel="stylesheet">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+
+    <meta name="author" content="Jasmin Trotter">
+    <meta name="description" content="CEP Communications is a social media marketing agency owned and operated by Tess Trotter in Los Angeles, California">
+    <meta name="keywords" content="social media, marketing, branding, digital marketing, business">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CEP Communications</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
